--- a/new-product.html
+++ b/new-product.html
@@ -101,31 +101,31 @@
             <div class="line7">
                 <div class="box5" style="margin-top: 2%;">
                     <div class="box2-in">
-                        <p style="font-family: GmarketSansMedium; font-size: 18px; font-weight: bold;">특이하고 다양한 맛</p>
-                        <p style="font-family: GmarketSansMedium; font-size: 18px; line-height: 32px;">
-                            소비자들은 좀 더 특이하고 다양한 맛의
-                            신상품을 선호하는 경향이 높아졌으며,
-                            기업들은 이러한 소비자들의 니즈에 맞추어
+                        <p class="t1">특이하고 다양한 맛</p>
+                        <p class="t2">
+                            소비자들은 좀 더 특이하고 다양한 맛의<br>
+                            신상품을 선호하는 경향이 높아졌으며,<br>
+                            기업들은 이러한 소비자들의 니즈에 맞추어<br>
                             매년 관련 신상품들을 출시하고 있다.
                         </p>
                     </div>
                     <div class="box2-in">
-                        <p style="font-family: GmarketSansMedium; font-size: 18px; font-weight: bold;">레트로와 건강</p>
-                        <p style="font-family: GmarketSansMedium; font-size: 18px; line-height: 32px;">
-                            2020년 올해의 트렌드는 바로 '할매 입맛'.
-                            촌스러운 옛날 음식이라고만 여겨진 맛이
-                            레트로와 건강을 중요시한 올해의 트렌드에
-                            맞게 '할매입맛'으로 새롭게 등장,
-                            건강한 웰빙 재료와 독특하면서도
+                        <p class="t1">레트로와 건강</p>
+                        <p class="t2">
+                            2020년 올해의 트렌드는 바로 '할매 입맛'.<br>
+                            촌스러운 옛날 음식이라고만 여겨진 맛이<br>
+                            레트로와 건강을 중요시한 올해의 트렌드에<br>
+                            맞게 '할매입맛'으로 새롭게 등장,<br>
+                            건강한 웰빙 재료와 독특하면서도<br>
                             중독성 있는 맛으로 승부한다.
                     </div>
                     <div class="box2-in">
-                        <p style="font-family: GmarketSansMedium; font-size: 18px; font-weight: bold;">먹거리 구독 서비스</p>
-                        <p style="font-family: GmarketSansMedium; font-size: 18px; line-height: 32px;">
-                            책, 동영상 스트리밍 서비스, 생필품 등에만
-                            제한되어 있던 구독 서비스가 식품까지
-                            확산하였으며 대중들은 합리적인 가격에
-                            정기적으로 음식을 편하게 결제할 수 있어
+                        <p class="t1">먹거리 구독 서비스</p>
+                        <p class="t2">
+                            책, 동영상 스트리밍 서비스, 생필품 등에만<br>
+                            제한되어 있던 구독 서비스가 식품까지<br>
+                            확산하였으며 대중들은 합리적인 가격에<br>
+                            정기적으로 음식을 편하게 결제할 수 있어<br>
                             만족도가 높다.
                         </p>
                     </div>
@@ -148,12 +148,12 @@
             <div class="line8">
                 <div class="box6" style="margin-top: 2%;">
                     <div>
-                        <img src="food_img/f2-2.png" width="100%">
+                        <img src="food_img/f2-2.png" width="90%">
                     </div>
                     <div style="width: 50%;">
                         <div class="box6-in1-2">
                             <span style="font-family: 'GmarketSansBold'; font-size: 30px;">흑임자우유, 귀리우유</span>
-                            <p style="font-family: GmarketSansMedium; font-size: 18px; line-height: 32px;">
+                            <p style="font-family: GmarketSansMedium; font-size: 0.9rem;">
                                 서울우유가 출시한 이 우유들은 맛과 영양까지 모두 챙기고 싶어
                                 하는 현대인들에게 식사 대용 또는 간식으로 주목받고 있으며
                                 특히 귀리우유는 유당을 분해하여 만든 우유로 유제품에
@@ -168,7 +168,7 @@
                     <div style="width: 50%;">
                         <div class="box6-in1-1">
                             <span style="font-family: 'GmarketSansBold'; font-size: 30px;">초당순두부 아이스크림</span>
-                            <p style="font-family: GmarketSansMedium; font-size: 18px; line-height: 32px;">
+                            <p style="font-family: GmarketSansMedium; font-size: 0.9rem;">
                                 순두부 특산지로 유명한 초당에서 만든 순두부가 28% 함유된
                                 이 아이스크림은 출시되자마자 폭발적인 인기를 끌어
                                 두 달 만에 100만 개 넘게 팔린 히트상품으로 유명하다.
@@ -176,7 +176,7 @@
                         </div>
                     </div>
                     <div>
-                        <img src="food_img/f2-3.png" width="100%">
+                        <img src="food_img/f2-3.png" width="90%">
                     </div>
                 </div>
             </div>
@@ -185,12 +185,12 @@
             <div class="line8">
                 <div class="box6" style="margin-top: 5%;">
                     <div>
-                        <img src="food_img/f2-4.png" width="100%">
+                        <img src="food_img/f2-4.png" width="90%">
                     </div>
                     <div style="width: 50%;">
                         <div class="box6-in1-2">
                             <span style="font-family: 'GmarketSansBold'; font-size: 30px;">공차 흑임자 스무디, 흑임자 밀크티</span>
-                            <p style="font-family: GmarketSansMedium; font-size: 18px; line-height: 32px;">
+                            <p style="font-family: GmarketSansMedium; font-size: 0.9rem;">
                                 앞서 설명한 서울우유의 신제품들과 마찬가지로
                                 공차에서도 흑임자를 재료로 한 신제품들을 출시.
                                 고소하고 진한 흑임자의 맛이 일품인 음료이며
@@ -207,7 +207,7 @@
                     <div style="width: 50%;">
                         <div class="box6-in1-1">
                             <span style="font-family: 'GmarketSansBold'; font-size: 30px;">비비빅 단호박맛</span>
-                            <p style="font-family: GmarketSansMedium; font-size: 18px; line-height: 32px;">
+                            <p style="font-family: GmarketSansMedium; font-size: 0.9rem;">
                                 출시된 이후 오랫동안 팥맛 한 종류만 생산해온 비비빅은
                                 2018년 이후 매년 새로운 맛을 출시하고 있다.
                                 2018년에는 '비비빅 더 프라임 인절미', 2019년에는
@@ -218,7 +218,7 @@
                         </div>
                     </div>
                     <div>
-                        <img src="food_img/f2-5.png" width="100%">
+                        <img src="food_img/f2-5.png" width="90%">
                     </div>
                 </div>
             </div>
@@ -241,12 +241,12 @@
             <div class="line8">
                 <div class="box6" style="margin-top: 2%;">
                     <div>
-                        <img src="food_img/f2-6.png" width="100%">
+                        <img src="food_img/f2-6.png" width="90%">
                     </div>
                     <div style="width: 50%;">
                         <div class="box6-in1-2">
                             <span style="font-family: 'GmarketSansBold'; font-size: 30px;">술담화</span>
-                            <p style="font-family: GmarketSansMedium; font-size: 18px; line-height: 32px;">
+                            <p style="font-family: GmarketSansMedium; font-size: 0.9rem;">
                                 한 달에 한 번씩 전통주 2-4병, 큐레이션카드, 스낵안주를 정기적
                                 으로 배송받을 수 있는 서비스인 '술담화'는 합리적인 가격으로
                                 편하게 전통주를 마실 수 있는 구독 서비스라는 점에서
@@ -262,7 +262,7 @@
                     <div style="width: 50%;">
                         <div class="box6-in1-1">
                             <span style="font-family: 'GmarketSansBold'; font-size: 30px;">그리팅</span>
-                            <p style="font-family: GmarketSansMedium; font-size: 18px; line-height: 32px;">
+                            <p style="font-family: GmarketSansMedium; font-size: 0.9rem;">
                                 현대그린푸드에서 런칭한 '그리팅'은 저당식과 다이어트식을
                                 정기적으로 받아보고 싶은 소비자들의 니즈를 충족시켜준다.
                                 식사 목적에 맞춰 영양이 설계된 케어푸드 반찬과 샐러드를
@@ -273,18 +273,18 @@
                             </p>
                         </div>
                     </div>
-                    <img src="food_img/f2-7.png" width="50%">
+                    <img src="food_img/f2-7.png" width="40%">
                 </div>
                 <!--두번째 줄 콘텐츠 내용3-->
                 <div class="line8">
                     <div class="box6" style="margin-top: 5%;">
                         <div>
-                            <img src="food_img/f2-8.png" width="100%">
+                            <img src="food_img/f2-8.png" width="90%">
                         </div>
                         <div style="width: 50%;">
                             <div class="box6-in1-2">
                                 <span style="font-family: 'GmarketSansBold'; font-size: 30px;">&emsp;월간 과자</span>
-                                <p style="font-family: GmarketSansMedium; font-size: 18px; line-height: 32px;">
+                                <p style="font-family: GmarketSansMedium; font-size: 0.9rem;">
                                     롯데제과는 제과업계 최초로 정기구독을 통해 매달
                                     여러 과자를 받아볼 수 있는 서비스를 런칭했다.
                                     월간과자는 9900원이라는 저렴한 가격으로 매월 여러 과자와
@@ -298,7 +298,7 @@
                         <div style="width: 50%;">
                             <div class="box6-in1-1">
                                 <span style="font-family: 'GmarketSansBold'; font-size: 30px;">백화점 구독 서비스&emsp;</span>
-                                <p style="font-family: GmarketSansMedium; font-size: 18px; line-height: 32px;">
+                                <p style="font-family: GmarketSansMedium; font-size: 0.9rem;">
                                     프리미엄 식품류를 주도적으로 판매하고 있는 백화점들 역시
                                     현재 트렌드에 맞추어 구독 서비스를 줄줄이 시작하고 있다.
                                     롯데백화점은 베이커리브랜드인 '여섯시오븐' 배송 서비스를
@@ -309,7 +309,7 @@
                                 </p>
                             </div>
                         </div>
-                        <img src="food_img/f2-9.png" width="50%">
+                        <img src="food_img/f2-9.png" width="40%">
                     </div>
                 </div>
             </div>
