new normal & food 2nd change

--- a/prevention.html
+++ b/prevention.html
@@ -281,7 +281,7 @@
                 <p class="copy">Copyright © 2020 C.C.tv all rights reserved.</p>
             </div>
             <div class="footer-about">
-                <p class="about1">Team CCTV<br>Culture Contents TV</p>
+                <p class="about1">Team C.C.tv<br>Culture Contents tv</p>
                 <p class="about2">Contents<br>Illustration<br>Web design<br>Web production</p>
                 <p class="about3">CHO · HAN<br>PARK · JANG<br>CHUN · JEONG<br>BAEK · KANG · MIN</p>
             </div>
