--- a/work.html
+++ b/work.html
@@ -102,7 +102,7 @@
         <!--메인 부분-->
         <div class="c-main">
             <!--첫번째 콘텐츠-->
-            <div class="line1" style="margin-top: 15%;">
+            <div class="line1" style="margin-top: 10%;">
                 <!--타이틀+이미지-->
                 <div class="line1-left">
                     <div class="subtitle">
@@ -112,8 +112,8 @@
                     <img id="img2" src="new_img/w02.jpg">
                 </div>
                 <!--설명-->
-                <div class="line1-right" style="width: 50%;">
-                    <p style="font-family: GmarketSansMedium; font-size: 20px; line-height: 32px;">
+                <div class="line1-right" style="width: 70%;">
+                    <p style="font-family: GmarketSansMedium; font-size: 1rem;">
                         코로나19 사태가 완만하게 진정되지 않고 주기적으로
                         감염자가 폭증함에 따라 많은 회사들이 방역 차원에서
                         사회적 거리두기를 준수하고 인원을 알맞게 나누어
@@ -130,25 +130,25 @@
                 </div>
                 <div class="box2" style="margin-top: 1%;">
                     <div class="box2-in">
-                        <p style="font-family: GmarketSansBold; font-size: 25px;">
+                        <p style="font-family: GmarketSansBold; font-size: 1.2rem; margin: 5% 0 0 0;">
                             실태</p>
-                        <p style="font-family: GmarketSansMedium; font-size: 18px; line-height: 32px;">
-                            취업정보 사이트 '사람인'의 자료에 따르면
-                            올해 재택근무를 실시하는 기업은 대기업 기준 60%가
-                            넘으며, 중견기업은 50%, 중소기업은 약 37%라고 한다.
-                            또한 IT, 정보통신 관련 기업들은 기업 특성상
-                            유연한 근무 문화와 재택근무가 가능한 직렬이 많아
+                        <p style="font-family: GmarketSansMedium; font-size: 0.86rem; line-height: 32px;">
+                            취업정보 사이트 '사람인'의 자료에 따르면<br>
+                            올해 재택근무를 실시하는 기업은 대기업 기준 60%가<br>
+                            넘으며, 중견기업은 50%, 중소기업은 약 37%라고 한다.<br>
+                            또한 IT, 정보통신 관련 기업들은 기업 특성상<br>
+                            유연한 근무 문화와 재택근무가 가능한 직렬이 많아<br>
                             감염을 방지하기 위한 재택근무를 적극적으로 시행 중이다.
                         </p>
                     </div>
                     <div class="box2-in">
-                        <p style="font-family: GmarketSansBold; font-size: 25px;">
+                        <p style="font-family: GmarketSansBold; font-size: 1.2rem; margin: 5% 0 0 0;">
                             정부의 지원</p>
-                        <p style="font-family: GmarketSansMedium; font-size: 18px; line-height: 32px;">
-                            대기업처럼 시스템과 예산을
-                            많이 뒷받침 할 수 없는 중소기업도 다수 있기 마련이다.
-                            이를 위해 정부는 재택근무제를 도입한 사업주에게
-                            최대 1년간 지원금을 지급하여 부담을 덜어주는
+                        <p style="font-family: GmarketSansMedium; font-size: 0.86rem; line-height: 32px;">
+                            대기업처럼 시스템과 예산을<br>
+                            많이 뒷받침 할 수 없는 중소기업도 다수 있기 마련이다.<br>
+                            이를 위해 정부는 재택근무제를 도입한 사업주에게<br>
+                            최대 1년간 지원금을 지급하여 부담을 덜어주는<br>
                             정책을 시행하고 있으며 가이드 라인 역시 제공하고 있다.
                         </p>
                     </div>
@@ -170,12 +170,12 @@
                 </div>
 
                 <div class="box3">
-                    <div class=box3-img style="margin-top: 10%;">
-                        <img src="new_img/w04.jpg" style="width: 497px;">
+                    <div class=box3-img style="margin-top: 10%; width: 60%;">
+                        <img src="new_img/w04.jpg" style="width: 100%;">
                         <p style="font-family: 'GmarketSansLight'; font-size: 13px; margin-top: 0%; text-align: left;">
                             출처 : 웹엑스 공식 홈페이지</p>
                     </div>
-                    <div class="box3-in1" style="margin-top: 10%;">
+                    <div class="box3-in1" style="margin-top: 10%; width: 40%;">
                         <!--세번째 콘텐츠 타이틀1-->
                         <span style="font-family: GmarketSansMedium; font-size: 18px;">Cisco Webex</span><br>
                         <span style="font-family: GmarketSansBold; font-size: 25px;">시스코 웹엑스</span>
@@ -187,12 +187,12 @@
                 </div>
 
                 <div class="box3">
-                    <div class=box3-img style="margin-top: 10%;">
-                        <img src="new_img/w05.png" style="width: 497px;">
+                    <div class=box3-img style="margin-top: 10%; width: 60%;">
+                        <img src="new_img/w05.png" style="width: 100%;">
                         <p style="font-family: 'GmarketSansLight'; font-size: 13px; margin-top: 0%; text-align: left;">
                             출처 : 마이크로소프트 공식 홈페이지</p>
                     </div>
-                    <div class="box3-in1" style="margin-top: 10%;">
+                    <div class="box3-in1" style="margin-top: 10%; width: 40%;">
                         <!--세번째 콘텐츠 타이틀1-->
                         <span style="font-family: GmarketSansMedium; font-size: 18px;">Microsoft Teams</span><br>
                         <span style="font-family: GmarketSansBold; font-size: 25px;">마이크로소프트 팀즈</span>
@@ -205,12 +205,12 @@
                 </div>
 
                 <div class="box3">
-                    <div class=box3-img style="margin-top: 10%;">
-                        <img src="new_img/w06.png" style="width: 497px;">
+                    <div class=box3-img style="margin-top: 10%; width: 60%;">
+                        <img src="new_img/w06.png" style="width: 100%;">
                         <p style="font-family: 'GmarketSansLight'; font-size: 13px; margin-top: 0%; text-align: left;">
                             출처 : 네이버 라인 공식 홈페이지</p>
                     </div>
-                    <div class="box3-in1" style="margin-top: 10%;">
+                    <div class="box3-in1" style="margin-top: 10%; width: 40%;">
                         <!--세번째 콘텐츠 타이틀1-->
                         <span style="font-family: GmarketSansMedium; font-size: 18px;">Line Works</span><br>
                         <span style="font-family: GmarketSansBold; font-size: 25px;">라인 웍스</span>
@@ -226,12 +226,12 @@
                 </div>
 
                 <div class="box3">
-                    <div class=box3-img style="margin-top: 10%;">
-                        <img src="new_img/w07.png" style="width: 497px;">
+                    <div class=box3-img style="margin-top: 10%; width: 60%;">
+                        <img src="new_img/w07.png" style="width: 100%;">
                         <p style="font-family: 'GmarketSansLight'; font-size: 13px; margin-top: 0%; text-align: left;">
                             출처 : 카카오 워크 공식 홈페이지</p>
                     </div>
-                    <div class="box3-in1" style="margin-top: 10%;">
+                    <div class="box3-in1" style="margin-top: 10%; width: 40%;">
                         <!--세번째 콘텐츠 타이틀1-->
                         <span style="font-family: GmarketSansMedium; font-size: 18px;">Kakao Work</span><br>
                         <span style="font-family: GmarketSansBold; font-size: 25px;">카카오 워크</span>
@@ -264,8 +264,8 @@
                     <img id="img2" src="new_img/w08.jpg">
                 </div>
                 <!--설명-->
-                <div class="line1-right" style="width: 50%;">
-                    <p style="font-family: GmarketSansMedium; font-size: 20px; line-height: 32px;">
+                <div class="line1-right" style="width: 60%;">
+                    <p style="font-family: GmarketSansMedium; font-size: 1rem;">
                         앞서 설명한 재택근무와 같은 맥락으로 많은 대학
                         교들은 집단감염을 막기 위해 대면 수업과 비대면
                         온라인 수업을 병행하고 있다.</p>
@@ -278,9 +278,9 @@
                 <div class="subtitle2">
                     <p style="font-family: 'GmarketSansMedium'; font-size: 30px; margin: 0.5rem;">온라인 수업 실태</p>
                 </div>
-                <div class="box2-2" style="margin-top: 5%;">
+                <div class="box2-2" style="margin-top: 0;">
                     <div class="box2-2-in">
-                        <p style="font-family: GmarketSansMedium; font-size: 18px; line-height: 32px;">
+                        <p style="font-family: GmarketSansMedium; font-size: 0.9rem; line-height: 32px;">
                             <br>온라인 수업을 진행하는 대학들은 각각 다른 플랫폼을 사용하여 수업을 업로드하거나, 혹은 화상강의
                             를 진행하고 있지만 학생들의 만족도는 썩 좋지는 않다. 비대면 수업을 통해 감염을 막는 효과는 있지만
                             수업의 질이나 전달력이 떨어지고, 대면 수업보다현장감이 떨어져 집중하기가 힘들다는 것.
@@ -315,19 +315,19 @@
                 <!--여섯번째 콘텐츠 소제목-->
                 <div class="box5" style="margin-top: 1%;">
                     <div class="subtitle3" style="width: 30%;">
-                        <span style="font-family: 'GmarketSansMedium'; font-size: 30px;">학교 제공 시스템</span>
+                        <span style="font-family: 'GmarketSansMedium'; font-size: 1.3rem;">학교 제공 시스템</span>
                     </div>
                     <div class="subtitle3" style="width: 30%;">
-                        <span style="font-family: 'GmarketSansMedium'; font-size: 30px;">&ensp;줌(Zoom)&ensp;</span>
+                        <span style="font-family: 'GmarketSansMedium'; font-size: 1.3rem;">&ensp;줌(Zoom)&ensp;</span>
                     </div>
                     <div class="subtitle3" style="width: 30%;">
-                        <span style="font-family: 'GmarketSansMedium'; font-size: 30px;">&ensp;유튜브(Youtube)&ensp;</span>
+                        <span style="font-family: 'GmarketSansMedium'; font-size: 1.3rem;">&ensp;유튜브(Youtube)&ensp;</span>
                     </div>
                 </div>
                 <!--여섯번째 콘텐츠 내용-->
                 <div class="box5">
                     <div style="width: 30%;">
-                        <p style="font-family: GmarketSansMedium; font-size: 18px; line-height: 32px;">
+                        <p style="font-family: GmarketSansMedium; font-size: 0.9rem; line-height: 32px;">
                             각 대학마다 기존에 운영하고 있던
                             온라인 플랫폼을 보완,
                             서버를 늘려 온라인 수업에 대응하고
@@ -337,7 +337,7 @@
                         </p>
                     </div>
                     <div style="width: 30%;">
-                        <p style="font-family: GmarketSansMedium; font-size: 18px; line-height: 32px;">
+                        <p style="font-family: GmarketSansMedium; font-size: 0.9rem; line-height: 32px;">
                             2011년 4월에 출시된 온라인 회의 전
                             용 플랫폼인 줌은 재택근무뿐만 아니라
                             온라인 수업에서도 매우 유용하게 사용
@@ -347,7 +347,7 @@
                         </p>
                     </div>
                     <div style="width: 30%;">
-                        <p style="font-family: GmarketSansMedium; font-size: 18px; line-height: 32px;">
+                        <p style="font-family: GmarketSansMedium; font-size: 0.9rem; line-height: 32px;">
                             세계 최고의 동영상 사이트인 만큼 안
                             정적이고 접근성이 매우 뛰어나기 때문
                             에 유튜브를 통해 강의를 업로드하는
@@ -366,17 +366,17 @@
                 </div>
                 <!--일곱번째 콘텐츠 내용 1-->
                 <div class="box6" style="margin-top: 2%;">
-                    <div>
-                        <img src="new_img/w12.jpg" style="width: 532px; height: 295px;">
+                    <div style="width: 50%;">
+                        <img src="new_img/w12.jpg" style="width: 100%;">
                         <p style="font-family: 'GmarketSansLight'; font-size: 13px; margin-top: 0%; text-align: left;">
                             출처 : 유튜브 채널 'BJ이차함수'</p>
                     </div>
-                    <div>
+                    <div style="width: 50%;">
                         <div class="box6-in1-1">
                             <span style="font-family: 'GmarketSansBold'; font-size: 30px;">BJ 이차함수</span>
                             <hr size="4" color="dimgray">
                             <div class="box6-in1-2">
-                            <p style="font-family: GmarketSansMedium; font-size: 18px; line-height: 32px;">
+                            <p style="font-family: GmarketSansMedium; font-size: 0.9rem; line-height: 32px;">
                                 유튜브에서 실시간 온라인 수업을 진행하던 수학학원 선생님인 '장현우'씨가
                                 의도치 않게 네티즌들에게 주목을 받아 새로운 인터넷 밈이 되기도 하였다.
                                 네티즌들의 장난스러운 채팅에 유쾌하게 대응한 장현우씨는 이후
@@ -390,11 +390,11 @@
 
                 <!--일곱번째 콘텐츠 내용 2-->
                 <div class="box6" style="margin-top: 5%;">
-                    <div class="box6-in2-1">
+                    <div style="width: 50%;" class="box6-in2-1">
                         <span style="font-family: 'GmarketSansBold'; font-size: 30px;">지코의 '아무노래' 챌린지</span>
                         <hr size="4" color="dimgray">
                         <div class="box6-in2-2">
-                            <p style="font-family: GmarketSansMedium; font-size: 18px; line-height: 32px;">
+                            <p style="font-family: GmarketSansMedium; font-size: 0.9rem; line-height: 32px;">
                                 한국교통대의 온라인 수업 과제로 지코의 '아무노래 챌린지'촬영이
                                 과제로 나와 학생들 사이에서 큰 웃음을 주었던 일이 있었다.
                                 다만 실제 과제를 제출해야 했던 학생들은 마냥 웃을 수 만은
@@ -403,7 +403,7 @@
                         </div>
                     </div>
                     <div style="width: 50%;">
-                        <img src="new_img/w13.jpg" style="width: 532px; height: 295px;">
+                        <img src="new_img/w13.jpg" style="width: 100%;">
                         <p style="font-family: 'GmarketSansLight'; font-size: 13px; margin-top: 0%; text-align: right;">
                             출처 : 한국교통대 에브리타임</p>
                     </div>
@@ -427,7 +427,7 @@
                 <p class="copy">Copyright © 2020 C.C.tv all rights reserved.</p>
             </div>
             <div class="footer-about">
-                <p class="about1">Team CCTV<br>Culture Contents TV</p>
+                <p class="about1">Team C.C.tv<br>Culture Contents tv</p>
                 <p class="about2">Contents<br>Illustration<br>Web design<br>Web production</p>
                 <p class="about3">CHO · HAN<br>PARK · JANG<br>CHUN · JEONG<br>BAEK · KANG · MIN</p>
             </div>
