new normal change

--- a/prevention.html
+++ b/prevention.html
@@ -90,10 +90,10 @@
                     개개인의 위생을 깨끗하게 유지하는 것은 매우 중요한 요소가 되었다.</p>
             </div>
             <div class="btn" style="margin-bottom: 15%;">
-                <a href="#one" style="font-family: GmarketSansMedium; font-size: 18px;">&ensp;마스크&ensp;</a>
-                <a href="#two" style="font-family: GmarketSansMedium; font-size: 18px;">&ensp;손씻기&ensp;</a>
-                <a href="#three" style="font-family: GmarketSansMedium; font-size: 18px;">&ensp;거리두기&ensp;</a>
-                <a href="#four" style="font-family: GmarketSansMedium; font-size: 18px;">한국의 생활 방역</a>
+                <a href="#one">마스크</a>
+                <a href="#two">손씻기</a>
+                <a href="#three">거리두기</a>
+                <a href="#four">한국의 생활 방역</a>
             </div>
         </div>
 
@@ -110,18 +110,21 @@
                 </div>
                 <!--두번째 콘텐츠 내용-->
                 <div>
-                    <p style="font-family: GmarketSansMedium; font-size: 18px; line-height: 32px;">
+                    <p>
                         마스크를 착용하는 것은 코로나19를 가장 확실하게 막는 방법이며,<br>
                         일반적으로 감염자의 비말에 섞인 바이러스가 타인의 호흡기로 유입이 되어<br>
                         감염되는 코로나19 특성상 마스크를 착용하는 것은 매우 중요하다.</p>
-                    <div>
-                        <img src="new_img/b02.jpg" width="50%" style="margin: 3%;">
+                    <div class="box5-1" style="align-items: center;">
+                        <div style="width: 45%; margin-right: 3%;">
+                            <img src="new_img/b02.jpg" width="100%">
+                        </div>
+                        <div style="width: 45%; margin-left: 3%;">
+                            <img src="new_img/b03.png" width="100%">
+                        </div>
                     </div>
-                    <div>
-                        <img src="new_img/b03.png" width="50%" style="margin: 3%;">
-                        <p style="font-family: 'GmarketSansLight'; font-size: 13px; margin-top: -3%; text-align: center;">
-                            출처 : 대전광역시 홈페이지, 식품의약품안전처 홈페이지</p>
-                    </div>
+                    <p style="font-family: 'GmarketSansLight'; font-size: 13px; text-align: center;">
+                                출처 : 대전광역시 홈페이지, 식품의약품안전처 홈페이지</p>
+
                 </div>
             </div>
 
@@ -159,32 +162,32 @@
                 </div>
                 <div class="box2" style="margin-top: 1%;">
                     <div class="box2-in">
-                        <p style="font-family: GmarketSansBold; font-size: 25px;">
+                        <p style="font-family: GmarketSansBold; font-size: 1.2rem;">
                             사회적 거리두기</p>
-                        <p style="font-family: GmarketSansMedium; font-size: 18px; line-height: 32px;">
-                            코로나19는 개인의 방역과 공동체가 함께 협조하여
-                            방역을 하는 것이 매우 중요한 부분이다.
-                            그렇기에 정부에서는 '사회적 거리두기'를 여러 단계로
-                            나누어 자세한 가이드라인을 배포하고 지키도록 한다.
+                        <p style="font-family: GmarketSansMedium; font-size: 0.9rem;">
+                            코로나19는 개인의 방역과 공동체가 함께 협조하여<br>
+                            방역을 하는 것이 매우 중요한 부분이다.<br>
+                            그렇기에 정부에서는 '사회적 거리두기'를 여러 단계로<br>
+                            나누어 자세한 가이드라인을 배포하고 지키도록 한다.<br>
                             '사회적 거리두기'는 현재 5단계로 나누어 실시하고 있다.
                         </p>
                     </div>
                     <div class="box2-in">
-                        <p style="font-family: GmarketSansBold; font-size: 25px;">
+                        <p style="font-family: GmarketSansBold; font-size: 1.2rem;">
                             생활 속 거리두기</p>
-                        <p style="font-family: GmarketSansMedium; font-size: 18px; line-height: 32px;">
-                            한국은 사회적 거리두기와 더불어 '생활 속 거리두기'라는
-                            지침도 올해 5월 6일부터 실시하고 있다.
-                            사회적 거리두기처럼 강제성이 있는 것은 아니지만
+                        <p style="font-family: GmarketSansMedium; font-size: 0.9rem;">
+                            한국은 사회적 거리두기와 더불어 '생활 속 거리두기'라는<br>
+                            지침도 올해 5월 6일부터 실시하고 있다.<br>
+                            사회적 거리두기처럼 강제성이 있는 것은 아니지만<br>
                             지키는 것이 권고되며 개인의 실천이 가장 중요하다.
                         </p>
                     </div>
-                    <div class="box5">
-                        <div><img src="new_img/b05.jpg" width="105%">
+                    <div class="box5-1">
+                        <div style="width: 40%; margin-right: 3%;"><img src="new_img/b05.jpg" width="100%">
                             <p style="font-family: 'GmarketSansLight'; font-size: 13px; margin-top: 0%; text-align: right;">
                                 출처 : 중앙재난안전대책본부</p>
                         </div>
-                        <div><img src="new_img/b06.jpg" width="90%">
+                        <div style="width: 40%; margin-left: : 3%;"><img src="new_img/b06.jpg" width="100%">
                             <p style="font-family: 'GmarketSansLight'; font-size: 13px; margin-top: 0%; text-align: right;">
                                 출처 : 대한민국 거리두기 배포자료</p>
                         </div>
@@ -210,13 +213,13 @@
                 <!--일곱번째 콘텐츠 소제목-->
                 <div class="box5" style="margin-top: 5%;">
                     <div class="subtitle3">
-                        <span style="font-family: 'GmarketSansMedium'; font-size: 30px;">거리두기 표시선</span>
+                        <span style="font-size: 1.2rem;">거리두기 표시선</span>
                     </div>
                     <div class="subtitle3">
-                        <span style="font-family: 'GmarketSansMedium'; font-size: 30px;">QR 코드</span>
+                        <span style="font-size: 1.2rem;">QR 코드</span>
                     </div>
                     <div class="subtitle3">
-                        <span style="font-family: 'GmarketSansMedium'; font-size: 30px;">드라이브 스루</span>
+                        <span style="font-size: 1.2rem;">드라이브 스루</span>
                     </div>
                 </div>
                 <!--일곱번째 콘텐츠 사진-->
@@ -234,7 +237,7 @@
                 <!--일곱번째 콘텐츠 내용-->
                 <div class="box5">
                     <div style="width: 30%;">
-                        <p style="font-family: GmarketSansMedium; font-size: 18px; line-height: 32px; width: 100%;">
+                        <p style="font-size: 0.9rem;">
                             버스정류장, 지하철 플랫폼, 동사무소, 마트 등
                             불특정 다수가 모이는 장소에 표시 선을 테이핑
                             하여 대중들이 좀 더 쉽고 적극적으로 사회적
@@ -242,7 +245,7 @@
                         </p>
                     </div>
                     <div style="width: 30%;">
-                        <p style="font-family: GmarketSansMedium; font-size: 18px; line-height: 32px;">
+                        <p style="font-size: 0.9rem;">
                             카페, 술집, 노래방, PC방 등 다인원이 모여
                             감염에 취약하다고 지정된 시설은 의무적으로
                             QR코드를 통해 전자 명부를 기록해야 한다.
@@ -254,7 +257,7 @@
                         </p>
                     </div>
                     <div style="width: 30%;">
-                        <p style="font-family: GmarketSansMedium; font-size: 18px; line-height: 32px;">
+                        <p style="font-size: 0.9rem;">
                             드라이브 스루 진료소는 자동차에 탑승한 채로
                             체온 측정, 문진표 작성, 검체 채취까지
                             약 10분 내외가 소요되는 검사 방식이다.
