--- a/self-care.html
+++ b/self-care.html
@@ -89,8 +89,8 @@
                     스스로 몸과 마음을 돌보는 '자기 관리'의 중요성이 더욱 대두되고 있다.</p>
             </div>
             <div class="btn">
-                <a href="#one" style="font-family: GmarketSansMedium; font-size: 18px;">마스크 트러블</a>
-                <a href="#two" style="font-family: GmarketSansMedium; font-size: 18px;">&ensp;자기관리&ensp;</a>
+                <a href="#one">마스크 트러블</a>
+                <a href="#two">자기관리</a>
             </div>
         </div>
 
@@ -111,7 +111,7 @@
                 </div>
                 <!--설명-->
                 <div class="line1-right">
-                    <p style="font-family: GmarketSansMedium; font-size: 20px; line-height: 32px;">
+                    <p style="font-family: GmarketSansMedium; font-size: 1rem;">
                         피부관리는 코로나시대 이전에도 자기관리의 대표적인 예시 중 하나였지만 코로나로 인해 마스크를 필수적으로 착용해야하는 현재, 마스크 트러블을 겪는 현대인들이 많아짐에 따라 과거보다 더 많은 주목을 받는다.</p>
                 </div>
             </div>
@@ -125,7 +125,7 @@
                 </div>
                 <!--두번째 콘텐츠 내용-->
                 <div>
-                    <p style="font-family: GmarketSansMedium; font-size: 18px; line-height: 32px;">
+                    <p>
                         장시간 마스크를 착용하면 호흡으로 인해 마스크 내부에 습기가 차고 온도가 올라간다.<br>
                         이 때 마스크 내부는 세균이 번식하기 쉬운 환경이 되고 높아진 온도로 피지 분비량은 증가한다.<br>
                         특히 색조 화장을 한 뒤 마스크를 착용하면 화장품과 땀, 노폐물 등이 섞이게 되어<br>
@@ -206,14 +206,14 @@
 
                 <!--네번째 콘텐츠 내용-->
                 <div class="box3">
-                    <div class=box3-img style="margin-top: 5%;">
+                    <div class=box3-img style="margin-top: 5%; width: 45%;">
                         <img src="new_img/g04.png" style="width: 100%;">
                     </div>
-                    <div class="box3-in1" style="width: 50%;">
+                    <div class="box3-in1" style="width: 55%;">
                         <!--네번째 콘텐츠 타이틀-->
                         <p style="font-family: GmarketSansBold; font-size: 25px;">박하차</p>
                         <!--네번째 콘텐츠 내용-->
-                        <p style="font-family: GmarketSansMedium; font-size: 18px; line-height: 32px;">
+                        <p style="font-size: 0.9rem;">
                             박하의 멘톨 성분이 피부를 시원하고 상쾌하게
                             만들어주며 가려움증과 염증 완화에 효과적이다.
                             또한 피부에 탄력을 더해 모공을 축소하는 효능도 있다.
@@ -226,31 +226,31 @@
                 </div>
 
                 <div class="box3">
-                    <div class="box3-in2" style="width: 50%;">
+                    <div class="box3-in2" style="width: 55%;">
                         <!--네번째 콘텐츠 타이틀-->
                         <p style="font-family: GmarketSansBold; font-size: 25px;">녹차</p>
                         <!--네번째 콘텐츠 내용-->
-                        <p style="font-family: GmarketSansMedium; font-size: 18px; line-height: 32px;">
+                        <p style="font-size: 0.9rem;">
                             녹차는 비타민, 카테킨, 토코페롤, 아미노산 등
                             피부에 좋은 많은 영양소가 다량 함유되어 있으며
                             과도하게 분비된 피지를 제거하는 데도 도움을 준다.
                             특히 진정작용이 뛰어나 입욕제로 사용하거나 화장솜에
                             적셔 팩처럼 활용하여 트러블 관리를 할 수 있다.
                     </div>
-                    <div style="margin-top: 5%;">
+                    <div style="margin-top: 5%; width: 45%;">
                         <img src="new_img/g05.png" style="width: 100%;">
                     </div>
                 </div>
 
                 <div class="box3">
-                    <div class=box3-img style="margin-top: 5%;">
+                    <div class=box3-img style="margin-top: 5%; width: 45%;">
                         <img src="new_img/g06.png" style="width: 100%;">
                     </div>
-                    <div class="box3-in1" style="width: 50%;">
+                    <div class="box3-in1" style="width: 55%;">
                         <!--네번째 콘텐츠 타이틀-->
                         <p style="font-family: GmarketSansBold; font-size: 25px;">율무차</p>
                         <!--네번째 콘텐츠 내용-->
-                        <p style="font-family: GmarketSansMedium; font-size: 18px; line-height: 32px;">
+                        <p style="font-size: 0.9rem;">
                             율무차는 맛도 좋지만 피부에도 좋다.
                             피부의 열과 습기를 낮추며 농을 제거해주며
                             피지 분비를 조절하는 데 효과가 있기 때문이다.
@@ -261,19 +261,19 @@
                 </div>
 
                 <div class="box3">
-                    <div class="box3-in2" style="width: 50%;">
+                    <div class="box3-in2" style="width: 55%;">
                         <!--네번째 콘텐츠 타이틀-->
                         <p style="font-family: GmarketSansBold; font-size: 25px;">진피차</p>
                         <!--네번째 콘텐츠 내용-->
-                        <p style="font-family: GmarketSansMedium; font-size: 18px; line-height: 32px;">
+                        <p style="font-size: 0.9rem;">
                             젊은 층에게는 생소할 수도 있는 진피차는
                             과육보다 많은 비타민C와 리모넨을 함유하고 있어
                             피부의 수분을 유지해주고, 피부 노화 예방,
                             탄력 생성 등의 효과를 기대할 수 있다.
                     </div>
-                    <div style="margin-top: 5%;">
+                    <div style="margin-top: 5%; width: 45%;">
                         <img src="new_img/g07.png" style="width: 100%;">
-                        <p style="font-family: 'GmarketSansLight'; font-size: 13px; margin-top: 0%; text-align: right;">
+                        <p style="font-family: 'GmarketSansLight'; font-size: 0.6rem; margin-top: 0%; text-align: right;">
                             출처 : 중앙일보 헬스미디어 '마스크로 생신 피부 트러블에는 녹차 율무차가 좋아요'</p>
                     </div>
                 </div>
@@ -295,7 +295,7 @@
                 </div>
                 <!--설명-->
                 <div class="line5-right">
-                    <p style="font-family: GmarketSansMedium; font-size: 20px; line-height: 32px;"><br>
+                    <p style="font-size: 1rem;"><br>
                         코로나19로 인하여 감염자가 많아져 사회적 거리두기의 단계가 올라가면 헬스장은 정상적으로 운영할 수 없게 된다. 즉, 평소처럼 헬스장에 가 운동을 하는 게 힘들어진 상황에서 자기관리를 위한 '홈트레이닝' 붐이 일고 있다.</p>
                 </div>
             </div>
@@ -309,8 +309,8 @@
 
                 <!--여섯번째 콘텐츠1-->
                 <div class="box4" style="margin-top: 2%;">
-                    <div>
-                        <img src="new_img/g09.jpg" style="width: 380px; height: 420px;">
+                    <div style="width: 50%;">
+                        <img src="new_img/g09.jpg" style="width: 100%;">
                         <p style="font-family: 'GmarketSansLight'; font-size: 13px; margin-top: 0%; text-align: left;">
                             출처 : 땅크부부 인스타(@thankyou_bubu)</p>
                     </div>
@@ -319,7 +319,7 @@
                         <p style="font-family: GmarketSansMedium; font-size: 18px;">부부와 함께 트레이닝</p>
                         <p style="font-family: GmarketSansBold; font-size: 25px;">"땅크부부"</p>
                         <!--여섯번째 콘텐츠 내용-->
-                        <p style="font-family: GmarketSansMedium; font-size: 18px; line-height: 32px;">
+                        <p style="font-family: GmarketSansMedium; font-size: 0.9rem; line-height: 32px;">
                             운동을 해본 적이 없어 어려운 사람도 땅크부부의 영상을 본다면 재밌고 쉽게 운동
                             을 따라 할 수 있을 것이다. 층간소음 걱정 없이 집에서 할 수 있는 운동뿐만 아니라
                             걷기, 댄스, 스트레칭 등 여러 홈트 방법을 소개하는 땅크부부의 영상을 운동초보들
@@ -335,8 +335,8 @@
 
                 <!--여섯번째 콘텐츠2-->
                 <div class="box4" style="margin-top: 5%;">
-                    <div>
-                        <img src="new_img/g10.jpg" style="width: 380px; height: 420px;">
+                    <div style="width: 50%;">
+                        <img src="new_img/g10.jpg" style="width: 100%;">
                         <p style="font-family: 'GmarketSansLight'; font-size: 13px; margin-top: 0%; text-align: left;">
                             출처 : 김계란 인스타(@physical_gallery_egg)</p>
                     </div>
@@ -345,7 +345,7 @@
                         <p style="font-family: GmarketSansMedium; font-size: 18px;">운동 꿀팁을 한 채널에서</p>
                         <p style="font-family: GmarketSansBold; font-size: 25px;">"피지컬 갤러리"</p>
                         <!--여섯번째 콘텐츠 내용-->
-                        <p style="font-family: GmarketSansMedium; font-size: 18px; line-height: 32px;">
+                        <p style="font-family: GmarketSansMedium; font-size: 0.9rem; line-height: 32px;">
                             국내 운동 관련 유튜브 채널들 중 가장 구독자 수가 많은 채널은 바로 '피지컬갤러
                             리'로 최근 가장 화제를 모으고 있는 채널이라고 할 수 있다. 운동 방법은 물론 체형
                             교정, 재활 정보, 예능 콘텐츠까지 다양한 영상들이 업로드 되어있으므로 자신의 흥
@@ -361,8 +361,8 @@
 
                 <!--여섯번째 콘텐츠3-->
                 <div class="box4" style="margin-top: 5%;">
-                    <div>
-                        <img src="new_img/g11.jpg" style="width: 380px; height: 420px;">
+                    <div style="width: 50%;">
+                        <img src="new_img/g11.jpg" style="width: 100%;">
                         <p style="font-family: 'GmarketSansLight'; font-size: 13px; margin-top: 0%; text-align: left;">
                             출처 : 유튜브 채널 '삐약스핏'</p>
                     </div>
@@ -371,7 +371,7 @@
                         <p style="font-family: GmarketSansMedium; font-size: 18px;">에너지 뿜뿜 신나게 홈트레이닝</p>
                         <p style="font-family: GmarketSansBold; font-size: 25px;">"삐약스핏"</p>
                         <!--여섯번째 콘텐츠 내용-->
-                        <p style="font-family: GmarketSansMedium; font-size: 18px; line-height: 32px;">
+                        <p style="font-family: GmarketSansMedium; font-size: 0.9rem; line-height: 32px;">
                             '삐약스핏'이라는 유튜브 채널은 몸에 있는 끼를 주체하지 못하는 사람들에게 딱
                             맞는 채널일 것이다. 신나는 음악과 에너지 넘치는 유튜버와 함께 운동을 하면 즐겁
                             게 칼로리를 대폭 소모할 수 있기에 작심삼일 다이어터들도 오랫동안 꾸준히 운동
@@ -411,46 +411,31 @@
                 <!--일곱번째 콘텐츠 소제목-->
                 <div class="box5" style="margin-top: 2%;">
                     <div class="subtitle3" style="width: 30%;">
-                        <span style="font-family: 'GmarketSansMedium'; font-size: 30px;">링피트 어드벤쳐</span>
+                        <span style="font-size: 1.2rem;">링피트 어드벤쳐</span>
                     </div>
                     <div class="subtitle3" style="width: 30%;">
-                        <span style="font-family: 'GmarketSansMedium'; font-size: 30px;">저스트 댄스</span>
+                        <span style="font-size: 1.2rem;">저스트 댄스</span>
                     </div>
                     <div class="subtitle3" style="width: 30%;">
-                        <span style="font-family: 'GmarketSansMedium'; font-size: 30px;">피트니스 복싱</span>
+                        <span style="font-size: 1.2rem;">피트니스 복싱</span>
                     </div>
                 </div>
                 <!--일곱번째 콘텐츠 내용-->
                 <div class="box5">
                     <div style="width: 30%;">
-                        <p style="font-family: GmarketSansMedium; font-size: 18px; line-height: 32px;">
-                            게임과 피트니스를 동시에 할 수 있는 닌텐
-                            도 스위치의 게임 패키지이며 총 60가지 이
-                            상의 동작을 통해 게이머는 힘든 운동도 재
-                            미로 승화할 수 있다.
+                        <p style="font-family: GmarketSansMedium; font-size: 0.9rem; line-height: 32px;">
+                            게임과 피트니스를 동시에 할 수 있는 닌텐도 스위치의 게임 패키지이며 총 60가지 이상의 동작을 통해 게이머는 힘든 운동도 재미로 승화할 수 있다.
                         </p>
                     </div>
                     <div style="width: 30%;">
-                        <p style="font-family: GmarketSansMedium; font-size: 18px; line-height: 32px;">
-                            노래에 맞춰 춤을 추는 댄서의 동작을
-                            따라 하며 목표 점수를 달성하는
-                            이 게임은 오랫동안 꾸준히 사랑받아왔다.
-                            해외팝뿐만 아니라 '내가 제일 잘 나가',
-                            '아기상어' 등의 유명한 케이팝도
-                            다수 수록되어 있어 남녀노소 재미있게
-                            즐기는 게 가능하다.
+                        <p style="font-family: GmarketSansMedium; font-size: 0.9rem; line-height: 32px;">
+                            노래에 맞춰 춤을 추는 댄서의 동작을 따라 하며 목표 점수를 달성하는 이 게임은 오랫동안 꾸준히 사랑받아왔다.
+                            해외팝뿐만 아니라 '내가 제일 잘 나가', '아기상어' 등의 유명한 케이팝도 다수 수록되어 있어 남녀노소 재미있게 즐기는 게 가능하다.
                         </p>
                     </div>
                     <div style="width: 30%;">
-                        <p style="font-family: GmarketSansMedium; font-size: 18px; line-height: 32px;">
-                            조이스틱을 양손에 잡고 즐기는
-                            사용자 행동 분석 복싱 게임으로
-                            다이어트, 체력강화, 건강 유지 등
-                            이용자의 목적에 맞춰 프로그램을
-                            자유롭게 선택할 수 있는 것이 특징.
-                            복싱의 칼로리 소모량이 매우 큰 만큼
-                            단기간 다이어트에 관심이 있는
-                            이용자에게 인기가 많다.
+                        <p style="font-family: GmarketSansMedium; font-size: 0.9rem; line-height: 32px;">
+                            조이스틱을 양손에 잡고 즐기는 사용자 행동 분석 복싱 게임으로 다이어트, 체력강화, 건강 유지 등 이용자의 목적에 맞춰 프로그램을 자유롭게 선택할 수 있는 것이 특징. 복싱의 칼로리 소모량이 매우 큰 만큼 단기간 다이어트에 관심이 있는 이용자에게 인기가 많다.
                         </p>
                     </div>
                 </div>
