--- a/prevention.html
+++ b/prevention.html
@@ -114,16 +114,17 @@
                         마스크를 착용하는 것은 코로나19를 가장 확실하게 막는 방법이며,<br>
                         일반적으로 감염자의 비말에 섞인 바이러스가 타인의 호흡기로 유입이 되어<br>
                         감염되는 코로나19 특성상 마스크를 착용하는 것은 매우 중요하다.</p>
-                    <div class="box5-1" style="align-items: center;">
-                        <div style="width: 45%; margin-right: 3%;">
-                            <img src="new_img/b02.jpg" width="100%">
-                        </div>
-                        <div style="width: 45%; margin-left: 3%;">
-                            <img src="new_img/b03.png" width="100%">
-                        </div>
+
+                    <div>
+                        <img src="new_img/b02.jpg" width="50%">
                     </div>
-                    <p style="font-family: 'GmarketSansLight'; font-size: 13px; text-align: center;">
-                                출처 : 대전광역시 홈페이지, 식품의약품안전처 홈페이지</p>
+                    <div>
+                        <img src="new_img/b03.png" width="50%">
+                        <p style="font-family: 'GmarketSansLight'; font-size: 13px; text-align: center;">
+                            출처 : 대전광역시 홈페이지, 식품의약품안전처 홈페이지</p>
+                    </div>
+
+
 
                 </div>
             </div>
