--- a/prevention.html
+++ b/prevention.html
@@ -272,7 +272,7 @@
                 </div>
 
                 <!--탑 버튼-->
-                <a href="#logo-img"><img id="topBtn" src="images/top.PNG"></a>
+                <a href="#logo-img"><img id="topBtn" src="images/top.png"></a>
 
             </div>
 
